Wrong member access operator is used in Cycles #76925

Closed
opened 2020-05-20 23:09:32 +02:00 by mirh · 9 comments

System Information
Operating system: Manjaro 20.0.1
Graphics card: HD 7750

Short description of error
D5689 (in kernel_film.h with "in") and D4686 (in kernel_adaptive_sampling.h, kernel_work_stealing.h and kernel_path.h with "aux") slipped in the same problem that was reported in #50474.
Changing -> to (* ). fixes this.

Exact steps for others to reproduce the error
Use cycles on the GPU (or well, one supporting only the 1.2 C++ API?)

**System Information** Operating system: Manjaro 20.0.1 Graphics card: HD 7750 **Short description of error** [D5689](https://archive.blender.org/developer/D5689) (in kernel_film.h with "in") and [D4686](https://archive.blender.org/developer/D4686) (in kernel_adaptive_sampling.h, kernel_work_stealing.h and kernel_path.h with "aux") slipped in the same problem that was reported in #50474. Changing `->` to `(* ).` fixes this. **Exact steps for others to reproduce the error** Use cycles on the GPU (or well, one supporting only the 1.2 C++ API?)
Author

Added subscriber: @mirh

Added subscriber: @mirh
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This issue was referenced by blender/cycles@3e72af22dc

This issue was referenced by blender/cycles@3e72af22dc288ac5d107a9b10ec69f09c7ecf170

This issue was referenced by f27e122d95

This issue was referenced by f27e122d95a4c682365c592585a9d78392192809

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-05-22 21:50:51 +02:00
Author

You missed the other files of D4686.

You missed the other files of [D4686](https://archive.blender.org/developer/D4686).

This issue was referenced by blender/cycles@2bd04c7462

This issue was referenced by blender/cycles@2bd04c746281e72070c4534627a8f056a885bfc0

This issue was referenced by 9f1f7ba2bb

This issue was referenced by 9f1f7ba2bbee2bf82b09e63fde4d8a187265f49a
Author

Perfect! I didn't even notice kernel_path_branched.h

Perfect! I didn't even notice kernel_path_branched.h
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76925
No description provided.