Fix T76925: more Cycles OpenCL compile errors with some drivers on Linux